--- a/styles.css
+++ b/styles.css
@@ -29,6 +29,7 @@
   button{
     color: #fff;
   background-color: #025157;
+  
   }
 
   li{
@@ -46,11 +47,11 @@
   }
 
   .logo{
-    width: 15%;
+    width: 10%;
   }
 
   .logo > img{
-    width: 15%;
+    width: 50%;
 
   }
 
@@ -63,9 +64,7 @@
   }
 
   .actions{
-    display: inline-flex;
-    flex-direction:row;
-    width: 15%;
+    width: 20%;
     text-align: right;
     font-size: 14px;
     font-weight: 600;
@@ -77,7 +76,7 @@
   
   .actions a {
     color: #67b54b;
-  }
+    }
 
   .actions button {
     color: white;
@@ -93,7 +92,7 @@
     text-align: center;
   }
  
-  .publish h3 {
+  h3 {
     font-family: "Alegreya", serif;
     font-size: 40px;
     line-height: 48px;
@@ -136,3 +135,64 @@
     width: 120px;
     margin-top: 10px;
   }
+
+  .color{
+    background-color: #67b54b;
+    padding: 50px;
+  }
+  
+  .practica{
+    display: flex;
+    width: 70%;
+    margin: 100px auto;
+    align-items:center;
+  }
+
+  .banner{
+    margin-left: 30px;
+    
+  }
+
+  .banimg{
+    background-color: white;
+    padding: 20px;
+  }
+
+  .banimg button{
+    height: 40px;
+    width: 250px;
+    
+  }
+   .text{
+    display: flex;
+    flex-direction: column;
+    
+   }
+
+   .features{
+    display: grid;
+    height: 660px;
+    grid-template: repeat(2, 1fr) / repeat(2, 1fr);
+    background-color:#025157;
+    padding: 5% 10%;
+  }
+
+  .article1{
+    background-color: white;
+    border: 1px solid #dadada;
+    border-radius: 5px;
+    margin-bottom: 30px;
+    margin-left: 15px;
+    margin-right: 15px;
+    display: flex;
+
+  }
+
+  .article2{
+    padding: 30px 20px 40px 40px;
+    flex: 2;
+  }
+
+ .article2 figure img{
+  width: 50px;
+ }
